# computational_physics_lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Equation-of-motion/Cartesian-coord/: main.c  plot_trajectory.gp  trajectory.c  trajectory.h
Integration/Trapezoidal/: integrate.c
Integration/Trapezoidal/Simple/: main.c
Numerical-methods/Integration/Trapezoidal/Complex/: main_integrate.c
Numerical-methods/Integration/Trapezoidal/Hard/: integrate.h
Numerical-methods/Integration/Trapezoidal/No-param/: integrate.c  integrate.h
Numerical-methods/Integration/Trapezoidal/Param-notypesafe/: integrate.c  integrate.h  main_integrate.c
Numerical-methods/Integration/Trapezoidal/Param-typesafe/: integrate.c  integrate.h  main_integrate.c
Numerical-methods/Inv-sqrt/: inv-sqrt.c
Numerical-methods/Sqrt/: sqrt-babylon.c  sqrt-babylon.h
Numerical-methods/Zeros/: main.c  zeros.c
Numerical-methods/Zeros_Newton-Raphson/: main.c  zeros-newton.c  zeros-newton.h
docs/: Doxyfile.in
include/: gnuplot_i.h  integrate_notypesafe.h  lennard_jones.h  minimum.h  numerov.h  print_routines.h  sqrt_babylon.h  verlet.h  zeros_newton.h
include/differential_eq/: numerov.h  runge_kutta.h
include/integration/param_notypesafe/: integrate.h
include/integration/param_typesafe/: integrate.h
include/linear_algebra/: array_routines.h  blas_wrappers.h  lapack_wrappers.h
include/numerical_methods/: derivative.h  fft_radial.h  integrate_typesafe.h  inv_sqrt.h  zero_bisection.h  zero_newton.h
include/physics/: lennard_jones.h  polar.h
numerical_methods/: CMakeLists.txt
numerical_methods/include/: inv_sqrt.h  zeros_newton.h
numerical_methods/include/integration/param_notypesafe/: integrate.h
numerical_methods/include/integration/param_typesafe/: integrate.h
numerical_methods/src/: CMakeLists.txt  Config.cmake.in
numerical_methods/src/integration/param_notypesafe/: integrate.c
numerical_methods/src/integration/param_typesafe/: main_integrate.c
numerical_methods/src/inv_sqrt/: inv_sqrt.c  main.c
numerical_methods/src/sqrt/: main.c  sqrt_babylon.c
numerical_methods/src/zeros_newton/: zeros_newton.c
numerical_methods/test/: CMakeLists.txt  sqrt.cpp
src/: CMakeLists.txt
src/differential_eq/: numerov.c  runge_kutta.c  verlet.c
src/gnuplot_i/: gnuplot_i.c
src/integrate_notypesafe/: integrate_notypesafe.c
src/integrate_typesafe/: integrate_typesafe.c
src/integration/param_typesafe/: integrate.c  main_integrate.c
src/lennard_jones/: lennard_jones.c
src/linear_algebra/: array_routines.c  blas_wrappers.c  lapack_wrappers.c
src/minimum/: minimum.c
src/numerical_methods/: derivative.c  fft_radial.c  integrate_notypesafe.c  integrate_typesafe.c  inv_sqrt.c  minimum.c  sqrt_babylon.c  zero_bisection.c  zero_newton.c
src/numerov/: numerov.c
src/physics/: lennard_jones.c  polar.c
src/print_routines/: print_routines.c
src/verlet/: verlet.c
src/zeros_newton/: zeros_newton.c
test/: CMakeLists.txt  blas_wrappers.cpp  lapack_wrappers.cpp  minimum.cpp  numerical_methods.cpp  numerov.cpp  print_routines.cpp  verlet.cpp  zero_bisection.cpp
